Обновил первое задание.

--- a/ASP_NET_HW_Module_02_part_01/Views/Tasks/Task1.cshtml
+++ b/ASP_NET_HW_Module_02_part_01/Views/Tasks/Task1.cshtml
@@ -3,3 +3,19 @@
     <h1>Решение 1</h1>
 
 </div>
+
+@{
+    var cat = new Cat();
+    var dog = new Dog();
+}
+
+<table class="table table-bordered table-sm table-striped">
+        <tr>
+            <td>@cat.ShowTitle()</td>
+            <td>@cat.ShowSound()</td>
+        </tr>
+        <tr>
+            <td>@dog.ShowTitle()</td>
+            <td>@dog.ShowSound()</td>
+        </tr>
+</table>
